crates/test-files/fixtures/compile_errors/module_const_non_base_type.fe
const FOO: String<3> = "foo"
